cargo-features = ["edition2021"]

[package]
name = "token-market"
description = "Smart contract for tokens market"
version = "0.1.0"
edition = "2021"
authors = ["Denis Semenov <ssdenis99@gmail.com>"]
license = "MIT"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
num-derive = "0.3.3"
num-traits = "0.2.8"
solana-program = "=1.7.14"
spl-token = {version = "=3.2.0", features = ["no-entrypoint"]}
thiserror = "1.0.29"

[dev-dependencies]
solana-program-test = "=1.7.14"
solana-sdk = "=1.7.14"

[lib]
name = "tokenmarket"
crate-type = ["cdylib", "lib"]
